# compile-time-pi

./: .bazelrc  .gitignore  Makefile  README.md  infinite-constexpr.patch
src/: BUILD.bazel  bigfloat.hpp  bigint.hpp  biguint.hpp  common.hpp  gf2n1.hpp  io.hpp  main.cpp  ssa.hpp
src/komori/: bigfloat.hpp  bigint.hpp  biguint.hpp  common.hpp  gf2n1.hpp  io.hpp  main.cpp  ssa.hpp
src/tests/: BUILD.bazel  bigfloat_test.cpp  bigint_test.cpp  biguint_test.cpp  common_test.cpp  gf2n1_test.cpp  io_test.cpp  ssa_test.cpp
