cc_library(
    name = "ssa",
    hdrs = [
        "bigfloat.hpp",
        "biguint.hpp",
        "common.hpp",
        "gf2n1.hpp",
        "io.hpp",
        "ssa.hpp",
    ],
    include_prefix = "komori",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "calc_pi",
    srcs = ["main.cpp"],
    deps = [":ssa"],
)
